fix rpm packaging (interactive rebase)
Make sure all files in rpm get placed relative to build root

Do not use the roof

remove spurious slash in rpm packaging

Add mkdir for /usr/bin in rpm packaging

Update files list to include proxylisting

Add environment variables to service file for rpm

Add file check for ips-apis dir

Change package name

Change python package name

More rpm tweaks

tiffle rpm

--- a/rpm/nmos-reverse-proxy.service
+++ b/rpm/nmos-reverse-proxy.service
@@ -1,1 +1,15 @@
-../debian/ips-reverseproxy-common.service
+[Unit]
+Description=ips-reverseproxy-common
+Wants=network-online.target
+After=network.target network-online.target
+
+[Service]
+ExecStart=/usr/bin/proxylisting
+User=ipstudio
+
+Environment=PROXYLISTING_ALIAS_SITES=/etc/httpd/conf.d/ips-apis/
+Environment=PROXYLISTING_PROXY_SITES=/etc/httpd/conf.d/ips-apis/
+
+[Install]
+WantedBy=multi-user.target
+Alias=ips-proxylisting.service
