--- a/debian/ips-reverseproxy-common.conf
+++ b/debian/ips-reverseproxy-common.conf
@@ -20,6 +20,9 @@
 			ProxyPassReverse http://127.0.0.1:12344/
 		</LocationMatch>
 
+		RequestHeader set X-Forwarded-Proto "https"
+		RequestHeader set X-Forwarded-Port "443"
+
 		SSLEngine on
 		SSLCertificateFile	/etc/ssl/certs/ssl-cert-snakeoil.pem
 		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
