--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,5 @@
 [DEFAULT]
-Depends: apache2, apache2-bin (>=2.4.18) | libapache2-mod-proxy-html, ssl-cert, libxml2-dev, ips-reverseproxy-common, python-nmoscommon 
-Depends3: apache2, apache2-bin (>=2.4.18) | libapache2-mod-proxy-html, ssl-cert, libxml2-dev, ips-reverseproxy-common, python3-nmoscommon 
+Depends: apache2, apache2-bin (>=2.4.18) | libapache2-mod-proxy-html, ssl-cert, libxml2-dev, python-nmoscommon 
+Depends3: apache2, apache2-bin (>=2.4.18) | libapache2-mod-proxy-html, ssl-cert, libxml2-dev, python3-nmoscommon 
 Build-Depends: apache2-dev, dh-python, dh-systemd
+Package: ips-reverseproxy-common
