--- a/debian/ips-reverseproxy-common.service
+++ b/debian/ips-reverseproxy-common.service
@@ -4,7 +4,7 @@ Wants=network-online.target
 After=network.target network-online.target
 
 [Service]
-ExecStart=/usr/bin/proxylisting
+ExecStart=python2 /usr/bin/proxylisting
 User=ipstudio
 
 [Install]
