--- a/debian/ips-reverseproxy-common.conf
+++ b/debian/ips-reverseproxy-common.conf
@@ -23,9 +23,10 @@
 		RequestHeader set X-Forwarded-Proto "https"
 		RequestHeader set X-Forwarded-Port "443"
 
-		SSLEngine on
-		SSLCertificateFile	/etc/ssl/certs/ssl-cert-snakeoil.pem
-		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+		# Uncomment for testing TLS/SSL. Commented out so as not to conflict with other TLS settings
+		#SSLEngine on
+		#SSLCertificateFile	/etc/ssl/certs/ssl-cert-snakeoil.pem
+		#SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
 
 		BrowserMatch "MSIE [2-6]" \
 				nokeepalive ssl-unclean-shutdown \
